# simbelmyne

./: .gitignore  Cargo.toml  IDEAS.md  Makefile  README.md  README.norg  RELEASE_NOTES.md  ROADMAP.md  match.yaml  perft.sh  rustfmt.toml
.github/workflows/: perft.yml  release.yml  tests.yml
chess/: BENCHMARKS.md  Cargo.toml
chess/src/: array_vec.rs  bitboard.rs  board.rs  constants.rs  fen.rs  lib.rs  magics.rs  perft.rs  piece.rs  san.rs  see.rs  square.rs
chess/src/movegen/: attack_boards.rs  castling.rs  legal_moves.rs  lookups.rs  magics.rs  mod.rs  move_array.rs  moves.rs  pext.rs  play_move.rs
chess/src/util/: fen.rs  mod.rs  parse.rs
chess/src/utils/: gen_magics.rs
chessmatch/: Cargo.toml  match.yaml
chessmatch/src/: engine.rs  main.rs  tui.rs  uci.rs
chessmatch/src/components/: board_view.rs  engine_info.rs  game_history.rs  mod.rs
docs/: TESTING.md  corrplexity.md  fen.md  index.md  lmr-ideas.md  nmp-refutation.md  time-management.md
engine/: Cargo.toml  build.rs
engine/src/: lib.rs  move_picker.rs  position.rs  search.rs  time_control.rs  transpositions.rs  uci.rs  zobrist.rs
engine/src/evaluate/: kp_cache.rs  kp_structure.rs  lookups.rs  mod.rs  params.rs  pretty_print.rs  terms.rs  tuner.rs  util.rs
engine/src/history_tables/: capthist.rs  corrhist.rs  countermoves.rs  history.rs  killers.rs  mod.rs  pv.rs  threats.rs
engine/src/search/: aspiration.rs  negamax.rs  params.rs  quiescence.rs  zero_window.rs
engine/src/tests/: mod.rs
journal/: 2023-10-13.norg  2023-10-14.norg  2023-10-15.norg  2023-10-17.norg  2023-10-21.norg  2023-10-22.norg  2023-10-23.norg  2023-10-24.norg  2023-10-26.norg  2023-10-27.norg  2023-10-29.norg  2023-10-30.norg  2023-11-05.norg  2023-11-11.norg  2023-11-19.norg  2023-12-19.norg  2023-12-21.norg  2023-12-23.norg  2023-12-24.norg  2023-12-26.norg
lichess/: Dockerfile  config.yml  deploy.sh
macros/: Cargo.toml
macros/src/: lib.rs
perft/: Cargo.toml  README.md
perft/src/: bench.rs  debug.rs  main.rs  perft.rs  perftree.rs  presets.rs
perft/src/debug/: board_view.rs  engine.rs  info_view.rs  mod.rs  tui.rs
scripts/: setup.sh
shared/: Cargo.toml
shared/src/: lib.rs  uci.rs
shared/src/components/: board_view.rs  mod.rs
simbelmyne/: Cargo.toml  build.rs
simbelmyne/src/: evaluate.rs  main.rs  move_picker.rs  play.rs  position.rs  search.rs  search_tables.rs  spsa.rs  square_piece_tables.rs  time_control.rs  transpositions.rs  tuner.rs  uci.rs  zobrist.rs
simbelmyne/src/cli/: bench.rs  divide.rs  migrate.rs  mod.rs  perft.rs  play.rs  presets.rs  tune.rs
simbelmyne/src/cli/debug/: board_view.rs  diff_table.rs  engine.rs  mod.rs  tui.rs
simbelmyne/src/cli/play/: board_view.rs  info_view.rs  input_view.rs  mod.rs  tui.rs
simbelmyne/src/evaluate/: accumulator.rs  kp_structure.rs  lookups.rs  mod.rs  new_eval.rs  new_params.rs  new_tuner.rs  params.rs  pawn_cache.rs  pawn_structure.rs  piece_square_tables.rs  pretty_print.rs  terms.rs  tuner.rs  util.rs
simbelmyne/src/history_tables/: capthist.rs  conthist.rs  corrhist.rs  countermoves.rs  history.rs  killers.rs  mod.rs  pv.rs  threats.rs
simbelmyne/src/search/: aspiration.rs  negamax.rs  params.rs  quiescence.rs  zero_window.rs
simbelmyne/src/tests/: mod.rs
src/: bitboard.rs  board.rs  fen.rs  main.rs  moves.rs  parse.rs
src/movegen/: castling.rs  legal_moves.rs  mod.rs  moves.rs  play_move.rs
src/util/: fen.rs  mod.rs  parse.rs
tuner/: Cargo.toml
tuner/src/: gradient_descent.rs  lib.rs  score.rs
uci/: Cargo.toml
uci/src/: client.rs  engine.rs  lib.rs  options.rs  search_info.rs  time_control.rs  wdl.rs
