[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
itertools = "0.11.0"
tikv-jemallocator = { version = "0.5.0", optional = true }

[features]
jemalloc = ["dep:tikv-jemallocator"]
