[package]
name = "simbelmyne-chess"
description = "A chess library that takes care of board representation and move generation, used by the Simbelmyne chess engine"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "magics"
path = "./src/utils/gen_magics.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
itertools = "0.11.0"
