[package]
name = "simbelmyne"
authors = [ "Sam Roelants" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { path = "../chess" }
uci = { path = "../uci" }
shared = { path = "../shared" }
anyhow = "1.0.75"
colored = "2.0.4"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.11.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
rayon = "1.8.0"
rand = "0.8.5"
tui-input = "0.8.0"
