[package]
name = "simbelmyne"
version = "1.9.0"
authors = [ "Sam Roelants" ]
description = " A somewhat UCI compliant chess engine that could probably beat you. "
readme = "./README.md"
repository = "https://github.com/sroelants/simbelmyne"
keywords = ["chess", "uci", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { path = "../chess", package = "simbelmyne-chess" }
tuner = { path = "../tuner" }
macros = { path = "../macros" }
uci = { path = "../uci", package = "simbelmyne-uci" }
anyhow = "1.0.75"
colored = "2.0.4"
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
rayon = "1.8.1"
arrayvec = "0.7.4"

[features]
default = ["spsa"]
spsa = []
wdl = []
