[package]
name = "simbelmyne"
version = "1.10.0"
authors = [ "Sam Roelants" ]
description = " A somewhat UCI compliant chess engine that could probably beat you. "
readme = "./README.md"
repository = "https://github.com/sroelants/simbelmyne"
keywords = ["chess", "uci", "games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { path = "../chess", package = "simbelmyne-chess" }
uci = { path = "../uci", package = "simbelmyne-uci" }
tuner = { path = "../tuner" }
macros = { path = "../macros" }
engine = { path = "../engine" }
anyhow = "1.0.75"
colored = "2.0.4"
clap = { version = "4.4.7", features = ["derive"] }
rayon = "1.8.1"
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }

[features]
default = []
spsa = []
wdl = []
texel = []
